// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<input
  class="components-slider wp-components-slider css-184wexh"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render max 1`] = `
<input
  class="components-slider wp-components-slider css-184wexh"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="50"
  min="0"
  style="--progress: 100%;"
  type="range"
  value="50"
/>
`;

exports[`props should render min 1`] = `
<input
  class="components-slider wp-components-slider css-184wexh"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="5"
  style="--progress: 47.368421052631575%;"
  type="range"
  value="50"
/>
`;

exports[`props should render size 1`] = `
<input
  class="components-slider wp-components-slider css-1l6kuzk"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;

exports[`props should render value 1`] = `
<input
  class="components-slider wp-components-slider css-184wexh"
  data-g2-c16t="true"
  data-g2-component="Slider"
  id="slider"
  max="100"
  min="0"
  style="--progress: 50%;"
  type="range"
  value="50"
/>
`;
